[package]
name = "decompiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui-multiwin = "0.3.1"
enum_dispatch = "0.3.12"
iced-x86 = "1.20.0"
object = "0.32.1"
ouroboros = "0.18"
rfd = "0.12.1"

