[package]
name = "decompiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["graphviz"]
graphviz = ["dep:graphviz-rust"]

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
egui-multiwin = "0.3.1"
enum_dispatch = "0.3.12"
graphviz-rust = { version = "0.6.6", optional=true }
iced-x86 = "1.20.0"
object = "0.32.1"
ouroboros = "0.18"
rfd = "0.12.1"
zune-png = "0.4.0"

[[bin]]
name = "decompiler-gui"
path = "src/main.rs"

[[bin]]
name = "decompiler-cli"
path = "src/cli.rs"

[[bin]]
name = "graph-generator"
path = "src/graph.rs"
required-features = ["graphviz"]