[package]
name = "decompiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["graphviz"]
graphviz = ["dep:graphviz-rust"]

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
egui-multiwin = "0.3.1"
enum_dispatch = "0.3.12"
graphviz-rust = { git="https://github.com/uglyoldbob/graphviz-rust", optional=true }
iced-x86 = { version = "1.20.0", features = ["serde"] }
itertools = "0.12.0"
object = "0.32.1"
ouroboros = "0.18"
rfd = "0.12.1"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
zune-png = "0.4.0"

[[bin]]
name = "decompiler-gui"
path = "src/main.rs"

[[bin]]
name = "decompiler-cli"
path = "src/cli.rs"

[[bin]]
name = "graph-generator"
path = "src/graph-generator.rs"
required-features = ["graphviz"]

[[bin]]
name = "graph-reducer-testing"
path = "src/reduce.rs"
required-features = ["graphviz"]
